Archivos pdf y word

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-SRINT FINAL MODULO 3.docx
-JAVA M3 - Sprint Final Módulo.docx
+SRINT_FINAL_MODULO_3.docx
+JAVA_M3-Sprint_Final_Módulo
 er_telovendo.mwb
 er_telovendo.mwb.bak
