--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ SRINT_FINAL_MODULO_3.docx
 JAVA_M3-Sprint_Final_Modulo.pdf
 er_telovendo.mwb
 er_telovendo.mwb.bak
-sprintfinal_telovendo.zip
+*.zip
 
